# kata-lang

./: .gitignore  .pre-commit-config.yaml  README.md  interpreter.py  interpreter2.py  patterns.py  pyproject.toml  repl.py  stacker.py  tokenizer.py  tokenizers_test_code.txt  toolbox.py
