[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Arthur", email = "azrael.zila@gmail.com"},
]
dependencies = [
    "rich>=11.1.0",
    "prompt-toolkit>=3.0.26",
    "pygments>=2.11.2",
    "black>=22.1.0",
    "flake8>=4.0.1",
    "pre-commit>=2.17.0",
    "pathspec>=0.9.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
